# python-course-library

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
library_old/: archive.py  models.py
library_old/tests/: conftest.py  test_book_storage.py  test_library.py
src/core/: factories.py  models.py  services.py
src/core/migrations/: 0001_initial.py  0002_hall_limit_library_limit_rack_limit_shelf_limit.py
